# fatsecret-mcp-server

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  cloud_server.py  pyproject.toml
src/fatsecret_mcp/: __init__.py  api_client.py  auth.py  config.py  exceptions.py  models.py  oauth_flow.py  server.py  token_store.py
tests/: README.md  __init__.py  conftest.py  test_api_client.py  test_auth.py  test_oauth_flow.py  test_token_store.py
