[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fatsecret-mcp"
version = "0.1.0"
description = "MCP server for FatSecret nutrition API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "FatSecret MCP", email = "noreply@example.com" }
]
keywords = ["mcp", "fatsecret", "nutrition", "food", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.26.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]

[project.scripts]
fatsecret-mcp = "fatsecret_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fatsecret_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]  # Allow long lines in test fixtures
